# voxel_engine

./: CMakeLists.txt  LICENSE  README.md  TODO.md  TODO_refactor.md
client/: CMakeLists.txt
client/include/voxel_engine/client/: camera.h  client.h  gui_layer.h  mesh.h  resource_manager.h  texture.h
client/include/voxel_engine/client/network/: local_client_connection.h
client/src/: client.cpp  client_world.cpp  client_world.h  resource_manager.cpp
client/src/gui/: gui_layer.cpp
client/src/loaders/: obj_loader.cpp  obj_loader.h
client/src/network/: local_client_connection.cpp
client/src/rendering/: mesh_data.h  opengl_texture.h  opengl_texture_array.h  render_pipeline.cpp  render_pipeline.h  shader.h  shader_manager.cpp  shader_manager.h  texture.cpp  texture_impl.h  ui_mesh_builder.cpp  ui_mesh_builder.h  world_mesh_builder.cpp  world_mesh_builder.h
client/src/rendering/interface/: irender_pass.h
client/src/rendering/opengl/: gl_mesh.cpp  gl_mesh.h
client/src/rendering/passes/: gl_entity_render_pass.cpp  gl_entity_render_pass.h  glui_render_pass.cpp  glui_render_pass.h  glworld_render_pass.cpp  glworld_render_pass.h
cmake/: VoxelEngineConfig.cmake.in
core/: CMakeLists.txt
core/include/voxel_engine/: callbacks.h  chat_history.h  chunk.h  commands.h  config.h  i_server_connection.h  math_utils.h  message.h  save_format.h  types.h  user.h  voxel_types.h
core/include/voxel_engine/network/: client_event.h  i_client_connection.h  i_server_connection.h  local_transport.h  server_request.h
core/src/: chat_history.cpp  chunk.cpp
examples/simple/: App.cpp  App.h  main.cpp
include/voxel_engine/: callbacks.h  camera.h  chat.h  chunk.h  command_registry.h  entity.h  gui_layer.h  math_utils.h  mesh.h  resource_manager.h  save_format.h  save_manager.h  texture.h  voxel_engine.h  voxel_types.h  world.h  world_coords.h
server/: CMakeLists.txt
server/include/voxel_engine/server/: chat.h  command_registry.h  commands.h  entity_components.h  entity_systems.h  save_manager.h  server.h  world.h
server/include/voxel_engine/server/network/: local_server_connection.h
server/src/: chat.cpp  command_registry.cpp  server.cpp  world.cpp
server/src/network/: local_server_connection.cpp
server/src/persistence/: save_manager.cpp
server/src/persistence/io/: compressed_stream.cpp  compressed_stream.h
shaders/: crosshair.frag  entity.frag  entity.vert  fragment.frag  simple.frag  simple.vert  simple_mvp.vert  vertex.vert
src/: config.h
src/core/: chat.cpp  chunk.cpp  chunk.h  command_registry.cpp  resource_manager.cpp  voxel_engine.cpp  world.cpp
src/gui/: gui_layer.cpp
src/loaders/: obj_loader.cpp  obj_loader.h
src/persistence/: save_manager.cpp
src/persistence/io/: compressed_stream.cpp  compressed_stream.h
src/rendering/: camera.h  mesh_builder.cpp  mesh_builder.h  mesh_data.h  opengl_texture.h  opengl_texture_array.h  render_pipeline.cpp  render_pipeline.h  renderer.cpp  renderer.h  shader.h  shader_manager.cpp  shader_manager.h  stb_image.h  texture.cpp  texture_impl.h  ui_mesh_builder.cpp  ui_mesh_builder.h  world_mesh_builder.cpp  world_mesh_builder.h
src/rendering/interface/: imesh_builder.h  irender_pass.h
src/rendering/opengl/: gl_mesh.cpp  gl_mesh.h
src/rendering/passes/: gl_entity_render_pass.cpp  gl_entity_render_pass.h  glchunk_render_pass.cpp  glchunk_render_pass.h  glui_render_pass.cpp  glui_render_pass.h  glworld_render_pass.cpp  glworld_render_pass.h
tests/: test_chunks.cpp  test_world.cpp
